--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>tomix</title>
   </head>
   <body>
-    <p></p>
+    <p>
+          <a href="tomixrm.vercel.app">ブログ</a>
+      </p>
   </body>
 </html>
